# alnflt

./: Cargo.toml  LICENSE  README.md  test_sorted.bam
.github/workflows/: release.yml  rust.yml
src/: main.rs
test/: test.bam
