[package]
name = "alnflt"
version = "0.1.0"
authors = ["illumination-k <illumination.k.27@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
rust-htslib = "*"
bio-types = "*"
atty="0.2"
anyhow = "1.0"